fixed some dynamic layout issues

--- a/demo.css
+++ b/demo.css
@@ -26,7 +26,6 @@ input, select {
 
 grid-chen {
     display: block;
-    height: 200px;
 }
 
 /*grid-chen:hover {
